--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
       - echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
       - docker tag cfnlint ${DOCKER_USERNAME}/cfnlint:latest
       - docker push ${DOCKER_USERNAME}/cfnlint:latest
-      #- curl -X POST https://hooks.microbadger.com/images/almerhor/cfnlint/BwefVjGpzAqzhSfbiv-fIq33dd0=
+      - curl -X POST https://hooks.microbadger.com/images/almerhor/cfnlint/lafvwCTxJsPdjdfXWQdWyWGpnto=
       - docker logout
 
   - stage: Check container
